--- a/src/components/TimeLine/style.css
+++ b/src/components/TimeLine/style.css
@@ -118,6 +118,7 @@ span.MuiTypography-root.MuiTypography-body2.MuiCardHeader-title.css-et1ao3-MuiTy
 
 .css-w6eiou-MuiAvatarGroup-root .MuiAvatar-root:last-child {
     margin-right: -8px !important;
+    margin-left: -5px !important;
 }
 
 
